@@ -1,3 +1,9 @@
+2009-06-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/monitor/nagios/stream.py:
+	Quick hack added to not pick up trailing " for url from asx
+	playlists.
+
 2009-06-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>
 
 	reviewed by: Julien
